fixing alignment of filter button

--- a/src/components/ManageContacts/FilterContacts/FilterContacts.css
+++ b/src/components/ManageContacts/FilterContacts/FilterContacts.css
@@ -29,7 +29,6 @@
 }
 
 .filter-contact header rux-button {
-  margin-right: -1.25rem;
   margin-left: 3.5rem;
 }
 
